# DE_CHALLENGE

./: README.md
.github/workflows/: git_actions.yml
DE_CHALLENGE/: pyproject.toml
DE_CHALLENGE/src/de_challenge/: create_data.py  data_check.py  drop_table.py  mnthly_aggregates.py  product_ratings.db  top3_products.py  unit_test.py
DE_CHALLENGE/tests/: unit_test.py
