[project]
name = "de-challenge"
version = "0.1.0"
description = ""
authors = [
    {name = "khandelwalkomal",email = "khandelwalkomal786@gmail.com"}
]
#readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "de_challenge", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
